--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
         networks:
             - lincoln
         environment:
+            - APP_ENV=production
             - DB_CONNECTION=mysql
             - DB_HOST=database
             - DB_PORT=3306
