--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
     fpm:
         build: .
         volumes:
-          - '.env:/app/.env'
+            - ".env:/app/.env"
         networks:
             - lincoln
         environment:
@@ -25,6 +25,8 @@ services:
             - lincoln
     database:
         image: mysql:8
+        volumes:
+            - "database:/var/lib/mysql"
         environment:
             - MYSQL_USER=lincoln
             - MYSQL_PASSWORD=lincoln
@@ -32,5 +34,7 @@ services:
             - MYSQL_DATABASE=lincoln
         networks:
             - lincoln
+volumes:
+    database:
 networks:
     lincoln:
